--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hookla",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -21,6 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
   },
   "eslintConfig": {
     "extends": [
